...
    
    // MARK: - Alerts
    func showAlert(quiz result: QuizResultsViewModel) {
        let alertModel = AlertModel(title: result.title,
                                    message: result.text,
                                    buttonText: result.buttonText,
                                    accessabilityId: "Game result") { [weak self] in
            guard let self else { return }
            presenter?.restartGame()
        }
        alertPresenter.show(viewController: self, model: alertModel)
    }
    
...
